--- a/style.css
+++ b/style.css
@@ -8,16 +8,17 @@ body {   font-family: Helvetica, san-serif;
 .transition { transition: .3s cubic-bezier(.3, 0, 0, 1.3) }
 .card {
     float: left;
-    background-color: #fff;
+    background-color: rgb(228, 228, 228);
     bottom: 0;
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);
   -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);
   -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);
     height: 300px;
     left: 0;
-    margin: auto;
+    margin: 20px;
+    margin-bottom: 10px;
     overflow: hidden;
-    position: absolute;
+    position: relative;
     right: 0;
     top: 0;
     width: 300px;
@@ -46,7 +47,7 @@ body {   font-family: Helvetica, san-serif;
 .card_circle {
     background: url('http://static1.squarespace.com/static/554a451ee4b00f74faae5e23/554ad044e4b05e007887777f/58ecc201725e25240ed58825/1491911809009/Zelda+BOTW+BitBloggist.jpg?format=1500w') no-repeat center bottom;
     background-color: #3487f7;
-    background-size: 320px;
+    background-size: 300px 130px;
     border-radius: 50%;
     height: 400px;
     margin-left: -75px;
