--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ body {   font-family: Helvetica, san-serif;
   background:     -ms-linear-gradient(90deg, #00aaee 10%, #DD2476 90%); /* IE10 */
   background:      -o-linear-gradient(90deg, #00aaee 10%, #DD2476 90%); /* Opera 11.10+ */
   background:         linear-gradient(90deg, #00aaee 10%, #DD2476 90%); /* W3C */ }
-.transition { transition: .3s cubic-bezier(.3, 0, 0, 1.3) }
+.transition { 
+    transition: .3s cubic-bezier(.3, 0, 0, 1.3)
+}
 .card {
     float: left;
     background-color: rgb(228, 228, 228);
@@ -22,6 +24,10 @@ body {   font-family: Helvetica, san-serif;
     right: 0;
     top: 0;
     width: 300px;
+    box-shadow:  0px 0px 20px 10px rgba(3, 0, 41, 0.694);
+    text-shadow: 1px 1px 2px  #2b2b2b;
+
+
 }
 .card:hover {
     height: 450px;
@@ -49,6 +55,9 @@ body {   font-family: Helvetica, san-serif;
     background-color: #3487f7;
     background-size: 300px 130px;
     border-radius: 50%;
+    border: 1px black solid;
+    box-shadow:  0px 0px 20px 10px  #8480c9;
+
     height: 400px;
     margin-left: -75px;
     margin-top: -270px;
@@ -56,7 +65,7 @@ body {   font-family: Helvetica, san-serif;
     width: 450px;
 }
 h2 {
-    color: #3487f7;
+    color: #0062e3;
     font-family: 'Raleway', sans-serif;
     font-size: 24px;
     font-weight: 200;
@@ -65,6 +74,7 @@ h2 {
     text-align: center;
     width: 100%;
     z-index: 9999;
+    font-weight: bold;
 }
 p {
     color: rgba(0,0,0,.6);
