--- a/style.css
+++ b/style.css
@@ -43,10 +43,12 @@ body {   font-family: Helvetica, san-serif;
     margin-top: -130px;
 }
 .card:hover h2 {
-    background: #3487f7;
+    background: #0049a9;
     color: #fff;
     margin-top: 100px;
     padding: 5px;
+    box-shadow:  0px 0px 20px 10px rgba(3, 0, 41, 0.694);
+
 }
 .card:hover h2 small { color: #fff }
 .card:hover p { margin-top: 300px }
@@ -65,7 +67,7 @@ body {   font-family: Helvetica, san-serif;
     width: 450px;
 }
 h2 {
-    color: #0062e3;
+    color: #00d9ff;
     font-family: 'Raleway', sans-serif;
     font-size: 24px;
     font-weight: 200;
@@ -121,8 +123,8 @@ p {
 }
 .cta:hover {
     background-color: #3487f7;
-    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 8px 17px 0 rgba(0, 30, 255, 0.2), 0 6px 20px 0 rgba(0, 30, 255, 0.2);
     color: #fff;
-    -moz-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -moz-box-shadow: 0 8px 17px 0 rgba(0, 30, 255, 0.2), 0 6px 20px 0 rgba(0, 30, 255, 0.2);
+    -webkit-box-shadow: 0 8px 17px 0 rgba(0, 30, 255, 0.2), 0 6px 20px 0 rgba(0, 30, 255, 0.2);
 }
