--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
+
+
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,200');
 body {   font-family: Helvetica, san-serif;
-  background: -webkit-linear-gradient(90deg, #00aaee 10%, #DD2476 90%); /* Chrome 10+, Saf5.1+ */
-  background:    -moz-linear-gradient(90deg, #00aaee 10%, #DD2476 90%); /* FF3.6+ */
-  background:     -ms-linear-gradient(90deg, #00aaee 10%, #DD2476 90%); /* IE10 */
-  background:      -o-linear-gradient(90deg, #00aaee 10%, #DD2476 90%); /* Opera 11.10+ */
-  background:         linear-gradient(90deg, #00aaee 10%, #DD2476 90%); /* W3C */ }
+  background: -webkit-linear-gradient(90deg, #00aaee 10%, #DD2476 90%); 
+  background:    -moz-linear-gradient(90deg, #00aaee 10%, #DD2476 90%); 
+  background:     -ms-linear-gradient(90deg, #00aaee 10%, #DD2476 90%); 
+  background:      -o-linear-gradient(90deg, #00aaee 10%, #DD2476 90%); 
+  background:         linear-gradient(90deg, #00aaee 10%, #DD2476 90%); 
+}
 .transition { 
-    transition: .3s cubic-bezier(.3, 0, 0, 1.3)
+    transition: .3s cubic-bezier(.3, 0, 0, 1.3);
 }
 .card {
     float: left;
@@ -18,7 +21,7 @@ body {   font-family: Helvetica, san-serif;
     height: 300px;
     left: 0;
     margin: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 80px;
     overflow: hidden;
     position: relative;
     right: 0;
@@ -29,13 +32,17 @@ body {   font-family: Helvetica, san-serif;
 
 
 }
+/* body of the cards after hover ليتم اضافة كلمات كثيرة */
 .card:hover {
     height: 450px;
     width: 300px;
+    z-index: 1;
+    
 }
+/* button for details */
 .card:hover .cta-container {
     display: inline;
-    margin-top: 380px;
+    margin-top: 380px
 }
 .card:hover .card_circle {
     background-size: 500px;
@@ -50,8 +57,16 @@ body {   font-family: Helvetica, san-serif;
     box-shadow:  0px 0px 20px 10px rgba(3, 0, 41, 0.694);
 
 }
-.card:hover h2 small { color: #fff }
-.card:hover p { margin-top: 300px }
+.card:hover h2 small { 
+    color: #fff;
+}
+
+/* game details black color */
+.card:hover p { 
+    margin-top: 300px;
+}
+
+/* game picture */
 .card_circle {
     background: url('http://static1.squarespace.com/static/554a451ee4b00f74faae5e23/554ad044e4b05e007887777f/58ecc201725e25240ed58825/1491911809009/Zelda+BOTW+BitBloggist.jpg?format=1500w') no-repeat center bottom;
     background-color: #3487f7;
@@ -59,7 +74,6 @@ body {   font-family: Helvetica, san-serif;
     border-radius: 50%;
     border: 1px black solid;
     box-shadow:  0px 0px 20px 10px  #8480c9;
-
     height: 400px;
     margin-left: -75px;
     margin-top: -270px;
@@ -89,6 +103,8 @@ p {
     text-align: center;
     z-index: 9999;
 }
+
+
 .cta-container {
     display: none;
     margin-top: 320px;
