--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,200');
 body {   font-family: Helvetica, san-serif;
-  background: -webkit-linear-gradient(90deg, #00aaee 10%, #DD2476 90%); 
+  background: -webkit-linear-gradient(90deg, #00b7ff 10%, #DD2476 90%); 
   background:    -moz-linear-gradient(90deg, #00aaee 10%, #DD2476 90%); 
   background:     -ms-linear-gradient(90deg, #00aaee 10%, #DD2476 90%); 
   background:      -o-linear-gradient(90deg, #00aaee 10%, #DD2476 90%); 
@@ -42,7 +42,7 @@ body {   font-family: Helvetica, san-serif;
 /* button for details */
 .card:hover .cta-container {
     display: inline;
-    margin-top: 380px
+    margin-top: 380px;
 }
 .card:hover .card_circle {
     background-size: 500px;
@@ -61,7 +61,7 @@ body {   font-family: Helvetica, san-serif;
     color: #fff;
 }
 
-/* game details black color */
+/* game info. black color */
 .card:hover p { 
     margin-top: 300px;
 }
