--- a/style.css
+++ b/style.css
@@ -12,8 +12,11 @@ body {   font-family: Helvetica, san-serif;
     transition: .3s cubic-bezier(.3, 0, 0, 1.3);
 }
 .card {
+    /* background-image: url(https://www.swishschool.com/u/up2/2013-1/1377421516811.jpg); */
+    background-image: url(https://ak2.picdn.net/shutterstock/videos/12864692/thumb/1.jpg);
+    background-size: 140%;
     float: left;
-    background-color: rgb(228, 228, 228);
+    /* background-color: rgb(228, 228, 228); */
     bottom: 0;
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);
   -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);
@@ -34,7 +37,10 @@ body {   font-family: Helvetica, san-serif;
 }
 /* body of the cards after hover ليتم اضافة كلمات كثيرة */
 .card:hover {
-    height: 450px;
+    /* background-image: url(https://png.pngtree.com/thumb_back/fw800/back_pic/04/00/82/2357ff190c397de.jpg); */
+    /* background-size: 300px 800px; */
+    /* background-position: 0px 50px; */
+    height: 600px;
     width: 300px;
     z-index: 1;
     
@@ -42,12 +48,15 @@ body {   font-family: Helvetica, san-serif;
 /* button for details */
 .card:hover .cta-container {
     display: inline;
-    margin-top: 380px;
+    margin-top: 490px;
+
 }
+
+/* game picture hover */
 .card:hover .card_circle {
     background-size: 500px;
     border-radius: 0;
-    margin-top: -130px;
+    margin-top: -160px;
 }
 .card:hover h2 {
     background: #0049a9;
@@ -62,8 +71,9 @@ body {   font-family: Helvetica, san-serif;
 }
 
 /* game info. black color */
+
 .card:hover p { 
-    margin-top: 300px;
+    margin-top: 320px;
 }
 
 /* game picture */
@@ -76,7 +86,7 @@ body {   font-family: Helvetica, san-serif;
     box-shadow:  0px 0px 20px 10px  #8480c9;
     height: 400px;
     margin-left: -75px;
-    margin-top: -270px;
+    margin-top: -350px;
     position: absolute;
     width: 450px;
 }
@@ -85,7 +95,7 @@ h2 {
     font-family: 'Raleway', sans-serif;
     font-size: 24px;
     font-weight: 200;
-    margin-top: 150px;
+    margin-top: 120px;
     position: absolute;
     text-align: center;
     width: 100%;
